before code review

--- a/src/main/resources/i18n/message_en.properties
+++ b/src/main/resources/i18n/message_en.properties
@@ -1,3 +1,26 @@
 Size.computerDTO.name = Name length must be between 1 and 255 characters.
 Pattern.computerDTO.introduced = This date must be formatted as DD-MM-YYYY.
 Pattern.computerDTO.discontinued = This date must be formatted as DD-MM-YYYY.
+
+label.addComputerTitle = Add Computer
+label.editComputerTitle = Edit Computer
+label.name = Computer name
+label.introduced = Introduced date
+label.discontinued = Discontinued date
+label.company = Company
+label.defaultSelect = Choose the brand of the computer
+button.add = Add
+button.edit = Edit
+button.cancel = Cancel
+
+dashboard.tableColumn.name = Computer name
+dashboard.tableColumn.introduced = Introduced date
+dashboard.tableColumn.discontinued = Discontinued date
+dashboard.tableColumn.company = Company
+dashboard.found = Computers found
+dashboard.first = First
+dashboard.last = Last
+dashboard.filterBy = Filter by name
+dashboard.search = Search name
+dashboard.button.add = Add computer
+dashboard.button.select = Select
